--- a/index.html
+++ b/index.html
@@ -118,6 +118,32 @@
     </div>
     <div class="compare">
         <p>비교 결과</p>
+        <fieldset>
+            <legend>개인 정보</legend>
+            <ul>
+                <li>
+                    <label for="name">이름</label>
+                    <input type="text" id="name">
+                </li>
+                <li>
+                    <label for="mail">메일 주소</label>
+                    <input type="text" id="mail">
+                </li>
+            </ul>
+        </fieldset>
+        <fieldset>
+            <legend>정보2</legend>
+            <ul>
+                <li>
+                    <label for="name">이름</label>
+                    <input type="text" id="name">
+                </li>
+                <li>
+                    <label for="mail">메일 주소</label>
+                    <input type="text" id="mail">
+                </li>
+            </ul>
+        </fieldset>
     </div>
 </body>
 
